feat(neighborhoods): allow uni pick() and split change moves
Majority AI-generated.