@@ -39,7 +39,7 @@ class SwapMoveTest {
         var solution = TestdataSolution.generateSolution(2, 2);
         var entity1 = solution.getEntityList().get(0);
         var entity2 = solution.getEntityList().get(1);
-        var value = solution.getValueList().get(0);
+        var value = solution.getValueList().getFirst();
 
         entity1.setValue(value);
         entity2.setValue(value);
